--- a/pages/celulares.html
+++ b/pages/celulares.html
@@ -37,18 +37,19 @@
         <div class="container-fluid">
           <a
             class="navbar-brand d-flex justify-content-end"
-            href="./error404.html"
+            href="./index.html"
           >
             <img
-              src="../img/EH1.png"
+              src="./img/EH1.png"
               alt="icono"
-              class="img-fluid me-2 imgnav"
+              class="img-fluid me-2"
+              style="width: 65px; height: 45px"
             />
             <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
           </a>
           <!--Carrito en dispositivos pequeños-->
-          <a href="./carrito.html" class="d-lg-none ms-1 me-4 position-relative">
-            <i class="bi bi-cart3 carrito"></i>
+          <a href="#" class="d-lg-none ms-1 me-4 position-relative">
+            <i class="bi bi-cart3" style="font-size: 1.8rem; color: #000"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
             >
@@ -82,8 +83,9 @@
               </form>
               <li class="nav-item">
                 <a
-                  class="nav-link me-5"
-                  href="../index.html"
+                  class="nav-link me-5 active"
+                  aria-current="page"
+                  href="./index.html"
                   >Inicio</a
                 >
               </li>
@@ -102,17 +104,17 @@
                 >
                 <ul class="dropdown-menu" aria-labelledby="menudropdown">
                   <li>
-                    <a class="dropdown-item" href="./login.html"
+                    <a class="dropdown-item" href="#"
                       ><i class="bi bi-caret-right"></i> Login</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./registro.html"
+                    <a class="dropdown-item" href="#"
                       ><i class="bi bi-caret-right"></i> Registrarse</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./contacto.html"
+                    <a class="dropdown-item" href="./pages/contacto.html"
                       ><i class="bi bi-caret-right"></i> Contacto</a
                     >
                   </li>
@@ -121,8 +123,8 @@
             </ul>
           </div>
           <!--Carrito en pantallas large-->
-          <a href="./carrito.html" class="ms-4 d-none d-lg-block me-4 position-relative">
-            <i class="bi bi-cart3 carrito"></i>
+          <a href="#" class="ms-4 d-none d-lg-block me-4 position-relative">
+            <i class="bi bi-cart3" style="font-size: 1.8rem; color: #000"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
             >
@@ -138,21 +140,21 @@
         <b><i class="bi bi-chevron-double-right"></i> Celulares</b>
       </h2>
       <!-- Video -->
-      <article class="mt-2 alturaVide">
+      <article class="mt-2 alturaVideo">
         <video width="100%" controls autoplay muted loop class="h-100">
           <source src="../img/celulares/video.mp4" type="video/mp4" />
         </video>
       </article>
       <!-- grilla -->
       <section class="container my-2">
-        <div class="row row-gap-3 d-flex justify-content-evenly">
+        <div class="row row-gap-3">
           <!-- 1 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
               class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
             >
               <img
-                src="../img/productos/Samsung-Zflip5.jpg"
+                src="../img/celulares/galaxy plegable.jpg"
                 class="card-img-top"
                 alt="galaxy plegable"
               />
@@ -163,8 +165,11 @@
                   <p class="card-text letraTitulo">
                     <b>Galaxy Z Flip 5</b>
                   </p>
+                  <p class="card-text m-0">Contado: $361.185</p>
+                  <p class="card-text letraCuotas mt-auto">
+                    6 cuotas de $ 72.300
+                  </p>
                 </div>
-                <a href="../pages/telefono1.html" class="btn text-white botonerror mt-3">Ver más</a>
               </div>
             </div>
           </div>
@@ -185,8 +190,11 @@
                   <p class="card-text letraTitulo">
                     <b>TCL 50-Pro 5GB</b>
                   </p>
+                  <p class="card-text m-0">Contado: $ 483.200</p>
+                  <p class="card-text letraCuotas mt-auto">
+                    6 cuotas de $ 110.100
+                  </p>
                 </div>
-                <a href="../pages/error404.html" class="btn text-white botonerror mt-3">Ver más</a>
               </div>
             </div>
           </div>
@@ -207,8 +215,11 @@
                   <p class="card-text letraTitulo">
                     <b>Motorola Moto 622 </b>
                   </p>
+                  <p class="card-text m-0">Contado: $ 295.000</p>
+                  <p class="card-text letraCuotas mt-auto">
+                    6 cuotas de $ 67.300
+                  </p>
                 </div>
-                <a href="../pages/error404.html" class="btn text-white botonerror mt-3">Ver más</a>
               </div>
             </div>
           </div>
@@ -229,8 +240,11 @@
                   <p class="card-text letraTitulo">
                     <b>Motorola E22 64 GB</b>
                   </p>
+                  <p class="card-text m-0">Contado: $ 407.300</p>
+                  <p class="card-text letraCuotas mt-auto">
+                    6 cuotas de $ 93.400
+                  </p>
                 </div>
-                <a href="../pages/error404.html" class="btn text-white botonerror mt-3">Ver más</a>
               </div>
             </div>
           </div>
@@ -251,8 +265,11 @@
                   <p class="card-text letraTitulo">
                     <b>Galaxy A35 - 5GB</b>
                   </p>
+                  <p class="card-text m-0">Contado: $ 512.300</p>
+                  <p class="card-text letraCuotas mt-auto">
+                    6 cuotas de $ 113.400
+                  </p>
                 </div>
-                <a href="../pages/error404.html" class="btn text-white botonerror mt-3">Ver más</a>
               </div>
             </div>
           </div>
@@ -273,126 +290,162 @@
                   <p class="card-text letraTitulo">
                     <b>Motorola G14 128 GB</b>
                   </p>
+                  <p class="card-text m-0">Contado: $ 712.600</p>
+                  <p class="card-text letraCuotas mt-auto">
+                    6 cuotas de $ 163.200
+                  </p>
                 </div>
-                <a href="../pages/error404.html" class="btn text-white botonerror mt-3">Ver más</a>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <!--Paginacion -->
+      <div class="mt-4 d-flex justify-content-center align-items-center">
+        <nav aria-label="Paginacion">
+          <ul class="pagination">
+            <li class="page-item">
+              <a
+                class="page-link"
+                href="../pages/heladeras"
+                aria-label="Previous"
+              >
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="../index.html">1</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="../pages/heladeras">2</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="../celulares.html">3</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="../index.html" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </main>
 
     <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
-        <div class="container">
-          <div class="row">
-            <div
-              class="col-12 col-md-4 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
+      <div class="container">
+        <div class="row">
+          <div
+            class="col-12 col-md-4 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
+          >
+            <a
+              href="./index.html"
+              class="link-underline-opacity-0 d-flex align-items-center gap-2"
             >
-              <a
-                href="../index.html"
-                class="link-underline-opacity-0 d-flex align-items-center gap-2"
-              >
-                <img
-                  src="../img/EH1.png"
-                  alt="icono"
-                  class="img-fluid imgfoot"
-              /></a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 text-light">
-              <ul class="list-unstyled text-center">
-                <h4 class="text-dark">Información</h4>
-                <li class="mb-1">
-                  <a
-                    href="./nosotros.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Acerca de nosotros</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Servicio al cliente</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Terminos y condiciones</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Politicas de privacidad</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 text-light">
-              <ul class="list-unstyled text-center fs-5">
-                <h4 class="text-dark">Redes Sociales</h4>
-                <li class="mb-1">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-facebook text-primary"></i> Facebook</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-instagram text-danger"></i> Instagram</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-linkedin text-primary-emphasis"></i>
-                    Linkedin</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 text-light">
-              <ul class="list-unstyled text-center">
-                <h4 class="text-dark">Metodos de Pago</h4>
-                <li class="mb-2 mt-2">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    ><img
-                      src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
-                      alt="icono"
-                      class="img-fluid me-2 iconoMC"
-                  /></a>
-                </li>
-                <li>
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    ><img
-                      src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
-                      alt="icono"
-                      class="img-fluid me-2 iconoVisa"
-                  /></a>
-                </li>
-              </ul>
-            </div>
+              <img
+                src="./img/EH1.png"
+                alt="icono"
+                class="img-fluid"
+                style="width: 130px; height: 100px"
+            /></a>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3 text-light">
+            <ul class="list-unstyled text-center">
+              <h4 class="text-dark">Información</h4>
+              <li class="mb-1">
+                <a
+                  href="./pages/nosotros.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Acerca de nosotros</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Servicio al cliente</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Terminos y condiciones</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Politicas de privacidad</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3 text-light">
+            <ul class="list-unstyled text-center fs-5">
+              <h4 class="text-dark">Redes Sociales</h4>
+              <li class="mb-1">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-facebook text-primary"></i> Facebook</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-instagram text-danger"></i> Instagram</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-linkedin text-primary-emphasis"></i>
+                  Linkedin</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3 text-light">
+            <ul class="list-unstyled text-center">
+              <h4 class="text-dark">Metodos de Pago</h4>
+              <li class="mb-2 mt-2">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  ><img
+                    src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
+                    alt="icono"
+                    class="img-fluid me-2"
+                    style="width: 75px; height: 60px"
+                /></a>
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  ><img
+                    src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
+                    alt="icono"
+                    class="img-fluid me-2"
+                    style="width: 65px; height: 55px"
+                /></a>
+              </li>
+            </ul>
           </div>
         </div>
-        <p class="text-center mt-5">&copy;Todos los derechos reservados</p>
+      </div>
+      <p class="text-center mt-5">&copy;Todos los derechos reservados</p>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
