--- a/pages/heladeras.html
+++ b/pages/heladeras.html
@@ -25,7 +25,12 @@
       href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@1,300&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/png" sizes="34x34" href="../img/favicon1.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="34x34"
+      href="../img/favicon1.png"
+    />
     <link rel="stylesheet" href="../css/style.css" />
     <title>
       ElectroHouse: Electrodomésticos, Tecnología y Artículos de Hogar
@@ -47,7 +52,10 @@
             <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
           </a>
           <!--Carrito en dispositivos pequeños-->
-          <a href="./carrito.html" class="d-lg-none ms-1 me-4 position-relative">
+          <a
+            href="./carrito.html"
+            class="d-lg-none ms-1 me-4 position-relative"
+          >
             <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -81,11 +89,7 @@
                 />
               </form>
               <li class="nav-item">
-                <a
-                  class="nav-link me-5"
-                  href="../index.html"
-                  >Inicio</a
-                >
+                <a class="nav-link me-5" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link me-5" href="#">Novedades</a>
@@ -121,7 +125,10 @@
             </ul>
           </div>
           <!--Carrito en pantallas large-->
-          <a href="./carrito.html" class="ms-4 d-none d-lg-block me-4 position-relative">
+          <a
+            href="./carrito.html"
+            class="ms-4 d-none d-lg-block me-4 position-relative"
+          >
             <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -172,7 +179,11 @@
                   </p>
                 </div>
                 <div>
-                  <a href="../pages/error404.html" class="btn btn-primary btn-error botonerror text-light w-100">Ver más</a>
+                  <a
+                    href="../pages/error404.html"
+                    class="btn btn-primary btn-error botonerror text-light w-100"
+                    >Ver más</a
+                  >
                 </div>
               </div>
             </div>
@@ -195,7 +206,11 @@
                     <b>Heladera Hisense - Puertas Inverter </b>
                   </p>
                   <div>
-                    <a href="../pages/heladera1.html" class="btn btn-primary btn-error botonerror text-light w-100">Ver más</a>
+                    <a
+                      href="../pages/heladera1.html"
+                      class="btn btn-primary btn-error botonerror text-light w-100"
+                      >Ver más</a
+                    >
                   </div>
                 </div>
               </div>
@@ -219,7 +234,11 @@
                     <b>Heladera Dream Ciclica con Freezer </b>
                   </p>
                   <div>
-                    <a href="../pages/error404.html" class="btn btn-primary btn-error botonerror text-light w-100">Ver más</a>
+                    <a
+                      href="../pages/error404.html"
+                      class="btn btn-primary btn-error botonerror text-light w-100"
+                      >Ver más</a
+                    >
                   </div>
                 </div>
               </div>
@@ -243,7 +262,11 @@
                     <b>Heladera LG - Bajo consumo 300Lts</b>
                   </p>
                   <div>
-                    <a href="../pages/error404.html" class="btn btn-primary btn-error botonerror text-light w-100">Ver más</a>
+                    <a
+                      href="../pages/error404.html"
+                      class="btn btn-primary btn-error botonerror text-light w-100"
+                      >Ver más</a
+                    >
                   </div>
                 </div>
               </div>
@@ -267,7 +290,11 @@
                     <b>Heladera Sigma - No Frost 260 lts</b>
                   </p>
                   <div>
-                    <a href="../pages/error404.html" class="btn btn-primary btn-error botonerror text-light w-100">Ver más</a>
+                    <a
+                      href="../pages/error404.html"
+                      class="btn btn-primary btn-error botonerror text-light w-100"
+                      >Ver más</a
+                    >
                   </div>
                 </div>
               </div>
@@ -291,7 +318,11 @@
                     <b>Heladera Whirpool - No Frost 320 lts </b>
                   </p>
                   <div>
-                    <a href="../pages/error404.html" class="btn btn-primary btn-error botonerror text-light w-100">Ver más</a>
+                    <a
+                      href="../pages/error404.html"
+                      class="btn btn-primary btn-error botonerror text-light w-100"
+                      >Ver más</a
+                    >
                   </div>
                 </div>
               </div>
@@ -314,14 +345,10 @@
                 <a class="page-link" href="./heladeras.html">2</a>
               </li>
               <li class="page-item">
-                <a class="page-link" href="../detalleCategorias.html">3</a>
+                <a class="page-link" href="./celulares.html">3</a>
               </li>
               <li class="page-item">
-                <a
-                  class="page-link"
-                  href="../detalleCategorias.html"
-                  aria-label="Next"
-                >
+                <a class="page-link" href="./celulares.html" aria-label="Next">
                   <span aria-hidden="true">&raquo;</span>
                 </a>
               </li>
@@ -332,116 +359,113 @@
     </main>
 
     <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
-        <div class="container">
-          <div class="row">
-            <div
-              class="col-12 col-md-4 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
+      <div class="container">
+        <div class="row">
+          <div
+            class="col-12 col-md-4 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
+          >
+            <a
+              href="../index.html"
+              class="link-underline-opacity-0 d-flex align-items-center gap-2"
             >
-              <a
-                href="../index.html"
-                class="link-underline-opacity-0 d-flex align-items-center gap-2"
-              >
-                <img
-                  src="../img/EH1.png"
-                  alt="icono"
-                  class="img-fluid imgfoot"
-              /></a>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 text-light">
-              <ul class="list-unstyled text-center">
-                <h4 class="text-dark">Información</h4>
-                <li class="mb-1">
-                  <a
-                    href="./nosotros.html"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Acerca de nosotros</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Servicio al cliente</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Terminos y condiciones</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    >Politicas de privacidad</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 text-light">
-              <ul class="list-unstyled text-center fs-5">
-                <h4 class="text-dark">Redes Sociales</h4>
-                <li class="mb-1">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-facebook text-primary"></i> Facebook</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-instagram text-danger"></i> Instagram</a
-                  >
-                </li>
-                <li class="mb-1">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
-                    ><i class="bi bi-linkedin text-primary-emphasis"></i>
-                    Linkedin</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="col-12 col-md-4 col-lg-3 text-light">
-              <ul class="list-unstyled text-center">
-                <h4 class="text-dark">Metodos de Pago</h4>
-                <li class="mb-2 mt-2">
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    ><img
-                      src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
-                      alt="icono"
-                      class="img-fluid me-2 iconoMC"
-                  /></a>
-                </li>
-                <li>
-                  <a
-                    href="#"
-                    class="link-underline-opacity-25 link-underline-opacity-100-hover"
-                    ><img
-                      src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
-                      alt="icono"
-                      class="img-fluid me-2 iconoVisa"
-                  /></a>
-                </li>
-              </ul>
-            </div>
+              <img src="../img/EH1.png" alt="icono" class="img-fluid imgfoot"
+            /></a>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3 text-light">
+            <ul class="list-unstyled text-center">
+              <h4 class="text-dark">Información</h4>
+              <li class="mb-1">
+                <a
+                  href="./nosotros.html"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Acerca de nosotros</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Servicio al cliente</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Terminos y condiciones</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  >Politicas de privacidad</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3 text-light">
+            <ul class="list-unstyled text-center fs-5">
+              <h4 class="text-dark">Redes Sociales</h4>
+              <li class="mb-1">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-facebook text-primary"></i> Facebook</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-instagram text-danger"></i> Instagram</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
+                  ><i class="bi bi-linkedin text-primary-emphasis"></i>
+                  Linkedin</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3 text-light">
+            <ul class="list-unstyled text-center">
+              <h4 class="text-dark">Metodos de Pago</h4>
+              <li class="mb-2 mt-2">
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  ><img
+                    src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
+                    alt="icono"
+                    class="img-fluid me-2 iconoMC"
+                /></a>
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="link-underline-opacity-25 link-underline-opacity-100-hover"
+                  ><img
+                    src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
+                    alt="icono"
+                    class="img-fluid me-2 iconoVisa"
+                /></a>
+              </li>
+            </ul>
           </div>
         </div>
-        <p class="text-center mt-5">&copy;Todos los derechos reservados</p>
+      </div>
+      <p class="text-center mt-5">&copy;Todos los derechos reservados</p>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
